fixed alignment and spacing for mode control button

--- a/frontend/css/quiz.css
+++ b/frontend/css/quiz.css
@@ -178,9 +178,11 @@ div[class^="question-status"].nav-on:hover {
 
 #quiz-mode-tile-controls {
   display: flex;
+  align-items: flex-end;
   height: 100%;
   position: relative;
   padding: 0px 10px;
+  margin: 5px 0px 10px 0px;
 }
 
 #quiz-mode-controls-info {
